--- a/Graphite/Graphite.vcxproj
+++ b/Graphite/Graphite.vcxproj
@@ -180,12 +180,9 @@
     <ClInclude Include="src\Graphite\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Graphite\Renderer\Shader.h" />
     <ClInclude Include="src\Graphite\Renderer\Texture.h" />
+    <ClInclude Include="src\Graphite\Renderer\VPRenderer.h" />
     <ClInclude Include="src\Graphite\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Graphite\Viewport\Renderer\ViewportRenderer.h" />
-    <ClInclude Include="src\Graphite\Viewport\Viewport.h" />
-    <ClInclude Include="src\Graphite\Viewport\ViewportCamera.h" />
-    <ClInclude Include="src\Graphite\Viewport\ViewportGrid.h" />
-    <ClInclude Include="src\Graphite\Viewport\ViewportLayer.h" />
+    <ClInclude Include="src\Graphite\Renderer\ViewportCamera.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
@@ -633,12 +630,9 @@
     <ClCompile Include="src\Graphite\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Graphite\Renderer\Shader.cpp" />
     <ClCompile Include="src\Graphite\Renderer\Texture.cpp" />
+    <ClCompile Include="src\Graphite\Renderer\VPRenderer.cpp" />
     <ClCompile Include="src\Graphite\Renderer\VertexArray.cpp" />
-    <ClCompile Include="src\Graphite\Viewport\Renderer\ViewportRenderer.cpp" />
-    <ClCompile Include="src\Graphite\Viewport\Viewport.cpp" />
-    <ClCompile Include="src\Graphite\Viewport\ViewportCamera.cpp" />
-    <ClCompile Include="src\Graphite\Viewport\ViewportGrid.cpp" />
-    <ClCompile Include="src\Graphite\Viewport\ViewportLayer.cpp" />
+    <ClCompile Include="src\Graphite\Renderer\ViewportCamera.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLFramebuffer.cpp" />
