--- a/Graphite/Graphite.vcxproj
+++ b/Graphite/Graphite.vcxproj
@@ -183,6 +183,11 @@
     <ClInclude Include="src\Graphite\Renderer\VPRenderer.h" />
     <ClInclude Include="src\Graphite\Renderer\VertexArray.h" />
     <ClInclude Include="src\Graphite\Renderer\ViewportCamera.h" />
+    <ClInclude Include="src\Graphite\Scene\Components.h" />
+    <ClInclude Include="src\Graphite\Scene\Entity.h" />
+    <ClInclude Include="src\Graphite\Scene\Scene.h" />
+    <ClInclude Include="src\Graphite\Scene\SceneCamera.h" />
+    <ClInclude Include="src\Graphite\Scene\ScriptableEntity.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
@@ -633,6 +638,9 @@
     <ClCompile Include="src\Graphite\Renderer\VPRenderer.cpp" />
     <ClCompile Include="src\Graphite\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Graphite\Renderer\ViewportCamera.cpp" />
+    <ClCompile Include="src\Graphite\Scene\Entity.cpp" />
+    <ClCompile Include="src\Graphite\Scene\Scene.cpp" />
+    <ClCompile Include="src\Graphite\Scene\SceneCamera.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLFramebuffer.cpp" />
