--- a/GraphEditor/imgui.ini
+++ b/GraphEditor/imgui.ini
@@ -4,16 +4,40 @@ Size=1280,720
 Collapsed=0
 
 [Window][Global View]
-Pos=0,19
-Size=1280,701
+Pos=372,19
+Size=908,701
 Collapsed=0
-DockId=0x09EF459F,0
+DockId=0x00000004,0
 
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Properties]
+Pos=0,19
+Size=370,318
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Scene Hierarchy]
+Pos=0,19
+Size=370,351
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Object Inspector]
+Pos=0,339
+Size=370,381
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace ID=0x09EF459F Window=0x9A404470 Pos=34,76 Size=1280,701 CentralNode=1 Selected=0x23B532D8
+DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=410,197 Size=1280,701 Split=X Selected=0x23B532D8
+  DockNode      ID=0x00000003 Parent=0x09EF459F SizeRef=370,701 Split=Y Selected=0x2E9237F7
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=369,351 Selected=0x2E9237F7
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=369,348 Split=Y Selected=0x199AB496
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=370,318 Selected=0x199AB496
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=370,381 Selected=0x92354B98
+  DockNode      ID=0x00000004 Parent=0x09EF459F SizeRef=908,701 CentralNode=1 Selected=0x23B532D8
 
