Minor renamign update

--- a/Graphite/Graphite.vcxproj
+++ b/Graphite/Graphite.vcxproj
@@ -181,17 +181,17 @@
     <ClInclude Include="src\Graphite\Renderer\Shader.h" />
     <ClInclude Include="src\Graphite\Renderer\Texture.h" />
     <ClInclude Include="src\Graphite\Renderer\UniformBuffer.h" />
-    <ClInclude Include="src\Graphite\Scene\SceneRenderer.h" />
     <ClInclude Include="src\Graphite\Renderer\VertexArray.h" />
     <ClInclude Include="src\Graphite\Renderer\ViewportCamera.h" />
     <ClInclude Include="src\Graphite\Scene\Components.h" />
     <ClInclude Include="src\Graphite\Scene\Entity.h" />
     <ClInclude Include="src\Graphite\Scene\Scene.h" />
     <ClInclude Include="src\Graphite\Scene\SceneCamera.h" />
+    <ClInclude Include="src\Graphite\Scene\SceneRenderer.h" />
     <ClInclude Include="src\Graphite\Scene\ScriptableEntity.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLFrameBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h" />
@@ -638,15 +638,15 @@
     <ClCompile Include="src\Graphite\Renderer\Shader.cpp" />
     <ClCompile Include="src\Graphite\Renderer\Texture.cpp" />
     <ClCompile Include="src\Graphite\Renderer\UniformBuffer.cpp" />
-    <ClCompile Include="src\Graphite\Scene\SceneRenderer.cpp" />
     <ClCompile Include="src\Graphite\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Graphite\Renderer\ViewportCamera.cpp" />
     <ClCompile Include="src\Graphite\Scene\Entity.cpp" />
     <ClCompile Include="src\Graphite\Scene\Scene.cpp" />
     <ClCompile Include="src\Graphite\Scene\SceneCamera.cpp" />
+    <ClCompile Include="src\Graphite\Scene\SceneRenderer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLFramebuffer.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLFrameBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
